feat: 카카오 지도 api 추가

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>서울신상</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2ef405ac4a76b8b780aeb750dceeec8b"></script>
 </head>
 <body>
     <h1>서울신상</h1>
@@ -22,8 +23,10 @@
         <div class="map-section">
             <h2>지도 산책</h2>
             <p>기간: 최근 1년</p>
+            <!-- 지도를 표시할 div 입니다 -->
+            <div id="map" style="width:100%;height:350px;"></div>
             <!-- 실제 프로젝트에서는 지도 API를 사용하여 지도를 동적으로 로드합니다 -->
-            <img src="https://t1.daumcdn.net/cfile/tistory/2636C73D568B80CF2F" alt="서울시 지도">
+            <!--<img src="https://t1.daumcdn.net/cfile/tistory/2636C73D568B80CF2F" alt="서울시 지도"> -->
         </div>
         <!-- 추가 콘텐츠 구간 -->
         <aside>
