feat: 검색 기능 test

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -14,6 +14,11 @@
         <div class="search">
             <input type="date" class="date-picker" id="start-date">
             <input type="date" class="date-picker" id="end-date">
+            <select id="business-status" class="date-picker">
+                <option value="all">전체</option>
+                <option value="영업/정상">영업중</option>
+                <option value="폐업">폐업</option>
+            </select>
             <input type="text" placeholder="검색어 입력">
             <button type="submit">검색</button>
         </div>
