fix:html 내 css,js 경로 수정

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>서울 신상 빵집</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2ef405ac4a76b8b780aeb750dceeec8b&libraries=services"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
@@ -62,6 +62,6 @@
             <p>© 2024 서울 신상 빵집. All rights reserved.</p>
         </div>
     </footer>
-    <script src="script/scripts.js"></script>
+    <script src="/script/scripts.js"></script>
 </body>
 </html>
