fix: index.html js 호출 수정

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2ef405ac4a76b8b780aeb750dceeec8b&libraries=services"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="/script/scripts.js" defer></script>
 </head>
 <body>
     <h1>서울 신상 빵집</h1>
@@ -62,6 +63,5 @@
             <p>© 2024 서울 신상 빵집. All rights reserved.</p>
         </div>
     </footer>
-    <script src="/script/scripts.js"></script>
 </body>
 </html>
