feat: 상단 빵 이미지 추가, 광고 기능 추가

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <title>서울 신상 빵집</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2ef405ac4a76b8b780aeb750dceeec8b&libraries=services"></script>
+    <!--<script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=2ef405ac4a76b8b780aeb750dceeec8b&libraries=services"></script>-->
+    <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=2ef405ac4a76b8b780aeb750dceeec8b&libraries=services"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="/script/scripts.js" defer></script>
 </head>
 <body>
-    <h1>서울 신상 빵집</h1>
+    <h1>
+        서울 신상 빵집
+        <img src="/img/bread.png" alt="bread" style="vertical-align: middle; width:150px; height:150px;">
+    </h1>
     <header>
         <!-- 검색창 구간 -->
         <div class="search">
@@ -56,6 +60,18 @@
             </div>
             <!--<button id="close-popup-btn">Close</button>-->
         </div>
+        <aside class="sidebar">
+            <!-- AdSense 광고 -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-8019374127780883"
+                 data-ad-slot="9074417304"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </aside>
     </main>
     <footer>
         <!-- 푸터 구간 -->
